sitepreview/trust/v1.3.0/Requirements-ReceiveBusinessRulesFHIR.md
# Receive HL7 FHIR business rules - WHO SMART Trust v1.3.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Receive HL7 FHIR business rules**

## Requirements: Receive HL7 FHIR business rules (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/Requirements/ReceiveBusinessRulesFHIR | *Version*:1.3.0 |
| Active as of 2025-10-27 | *Computable Name*:Receive FHIR Business Rules |

 
Receive business rules from a Trust Network Participant, for distribution within the Trust Network using HL7 FHIR standard 

* Publisher: Contact Email
  * [WHO](http://who.int): No contact email has been registered.
* Publisher: Jurisdiction
  * [WHO](http://who.int): 
* Publisher: Statements
  * [WHO](http://who.int): 
* Publisher: Derived from
  * [WHO](http://who.int): This requirement is not derived from another requriement.
* Publisher: Derivatives
  * [WHO](http://who.int): This requirement has the following derivatives:
* Publisher: Participating Actors
  * [WHO](http://who.int): * [Trust Network Anchor](ActorDefinition-TrustNetworkAnchor.md)


